--- a/l2d.js/tsconfig.json
+++ b/l2d.js/tsconfig.json
@@ -1,5 +1,11 @@
 {
   "files": [],
+  "compilerOptions": {
+    "strictPropertyInitialization": false,
+    "verbatimModuleSyntax": false,
+    "strict": false,
+    "strictNullChecks": false,
+  },
   "references": [
     {
       "path": "./tsconfig.node.json"
