--- a/l2d.rs/Cargo.toml
+++ b/l2d.rs/Cargo.toml
@@ -18,3 +18,8 @@ screen-info = "0.0.1"
 actix-web-lab = "0.24.3"
 actix = "0.13.5"
 actix-web-actors = "4.3.1"
+lazy_static = "1.5.0"
+cpal = "0.17.1"
+atomic_float = "1.1.0"
+anyhow = "1.0.101"
+mime_guess = "2.0.5"
